version/0.19/_sources/api/solver/_autosummary/settings/pressure_jump.rst.txt
:orphan:

.. _pressure_jump:

pressure_jump
=============

.. autoclass:: ansys.fluent.core.solver.settings_241.pressure_jump.pressure_jump
    :show-inheritance:

.. rubric:: Attributes

==================================================   ============================================================

Attribute                                                                                                 Summary

==================================================   ============================================================
:ref:`option <option>`                                                                            'option' child.

:ref:`function_of <function_of>`                              Specify what variable this object is a function of.

:ref:`value <value_4>`                                                   Specify value as constant or expression.

:ref:`piecewise_polynomial <piecewise_polynomial>`                         Specify piecewise-polynomial settings.

:ref:`piecewise_linear <piecewise_linear_1>`             Specify ranges and values for piecewise-linear property.

:ref:`polynomial <polynomial_1>`                                                 Specify polynomial coefficients.

==================================================   ============================================================

.. rubric:: Included in:

==================================   =================================

Parent                                                         Summary

==================================   =================================
:ref:`momentum <momentum>`                         Help not available.

:ref:`fan_child <fan_child>`               'child_object_type' of fan.

:ref:`phase_child <phase_child_4>`       'child_object_type' of phase.

:ref:`momentum <momentum_2>`                       Help not available.

==================================   =================================

